[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MyNetworking/LobbyList.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MyNetworking/LobbyPanel.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Connecting" ]
}

[sub_resource type="Animation" id=2]
resource_name = "connecting"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Connecting", "Connecting.", "Connecting..", "Connecting..." ]
}

[node name="LobbyList" type="Node2D"]
script = ExtResource( 1 )

[node name="Refresh" type="Button" parent="."]
margin_left = 389.0
margin_top = 389.0
margin_right = 560.0
margin_bottom = 434.0
text = "Refresh"

[node name="Refresh2" type="Button" parent="."]
margin_left = 311.0
margin_top = 479.0
margin_right = 648.0
margin_bottom = 524.0
text = "Create Lobby"

[node name="Back" type="Button" parent="."]
margin_left = 35.0
margin_top = 530.0
margin_right = 170.0
margin_bottom = 575.0
text = "back"

[node name="LobbyList" type="ScrollContainer" parent="."]
margin_left = 125.0
margin_top = 90.0
margin_right = 844.0
margin_bottom = 356.0

[node name="LobbyPanel" parent="LobbyList" instance=ExtResource( 2 )]

[node name="Connecting" type="Label" parent="."]
margin_left = 440.0
margin_top = 57.0
margin_right = 511.0
margin_bottom = 71.0
text = "Connecting"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Connecting"]
autoplay = "connecting"
playback_speed = 0.4
anims/RESET = SubResource( 1 )
anims/connecting = SubResource( 2 )

[node name="ConnectionCheckTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="Refresh" to="." method="_on_Refresh_pressed"]
[connection signal="pressed" from="Refresh2" to="." method="_on_Refresh_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="ConnectionCheckTimer" to="." method="_on_ConnectionCheckTimer_timeout"]
